pasando tipo de incidente a llave foranea

--- a/sini/templates/sini/api_user/api_user_detail.html
+++ b/sini/templates/sini/api_user/api_user_detail.html
@@ -378,7 +378,8 @@ $('#password-form').on('submit', function(event){
         $("#dismisscambiarPassword").prop('disabled', false);
         $("#newpassword").val("");
         $('#checkShow').prop('checked', false);
-     
+        var x = document.getElementById("newpassword");
+        x.type = "password";
         
 
     },
@@ -393,6 +394,8 @@ $('#password-form').on('submit', function(event){
         $("#dismisscambiarPassword").prop('disabled', false);
         $("#newpassword").val("");
         $('#checkShow').prop('checked', false);
+        var x = document.getElementById("newpassword");
+        x.type = "password";
 
      
 
