--- a/sini/templates/sini/incidence/incidence_form.html
+++ b/sini/templates/sini/incidence/incidence_form.html
@@ -101,8 +101,8 @@
             </div>
             <div class="col-3">
               <div class="form-group">
-                <h6>{{ form.incidence_type.label }} {% if form.incidence_type.field.required %}<span>*</span>{% endif %}</h6>
-                {{ form.incidence_type }}
+                <h6>{{ form.type_incidence.label }} {% if form.type_incidence.field.required %}<span>*</span>{% endif %}</h6>
+                {{ form.type_incidence }}
               </div>
             </div>
             <div class="col-3">
