--- a/sini/templates/sini/incidence/incidence_send_email.html
+++ b/sini/templates/sini/incidence/incidence_send_email.html
@@ -5,7 +5,7 @@
 <h1><strong>Datos de la incidencia</strong></h1>
 <strong>Nombre:</strong> {{incidence.name}}<br>
 <strong>Prioridad:</strong> {{incidence.priority}}<br>
-<strong>Tipo:</strong> {{incidence.get_incidence_type_display}}<br>
+<strong>Tipo:</strong> {{incidence.type_incidence}}<br>
 <strong>Status:</strong> {{incidence.get_status_display}}<br>
 <strong>Fecha creación:</strong> {{incidence.created|date:"d/m/Y"}}<br>
 <strong>Coordenadas <small>(latidud,longitud)</small>:</strong> ({{latitud}}, {{longitud}})<br>
