--- a/sini/templates/sini/warning/warning_detail.html
+++ b/sini/templates/sini/warning/warning_detail.html
@@ -158,7 +158,7 @@
             <div class="col-3">
               <div class="form-group">
                 <h6>Tipo incidente</h6>
-                <div class="mr-2">{% firstof warning.get_incidence_type_display|default_if_none:"-" %}</div>
+                <div class="mr-2">{% firstof warning.type_incidence|default_if_none:"-" %}</div>
               </div>
             </div>
             <!--div class="col-3">
@@ -481,7 +481,6 @@
           </div>
           <div class="col-10">
            <p class="text-sm mb-0 font-weight-bold">
-              Han ocurrido errores al eliminar <br>
               <span id="errorspan"></span>
            </p>
            
@@ -630,7 +629,7 @@ document.getElementById("crearIncidencia").addEventListener('click', function(){
                    errorspan.textContent = response.responseJSON.error;
               }
               else{
-                errorspan.textContent ='Ha ocurrido un error al asignar, Contacte al Administrador';
+                errorspan.textContent ='Ha ocurrido un error al crear la incidencia, Contacte al Administrador';
               }
               
               
