--- a/sini/static/sini/css/select2-custom.css
+++ b/sini/static/sini/css/select2-custom.css
@@ -25,3 +25,13 @@
  .ui-select-container.ui-select-bootstrap .ui-select-choices-row.active > a {
    background-color: #0F4374;
  }
+
+ .select2-selection__rendered {
+  line-height: 34px !important;
+}
+.select2-container .select2-selection--single {
+  height: 38px !important;
+}
+.select2-selection__arrow {
+  height: 37px !important;
+}
