--- a/sini/templates/sini/incidence/incidence_form.html
+++ b/sini/templates/sini/incidence/incidence_form.html
@@ -1,4 +1,5 @@
 {% extends 'layouts/base.html' %}
+{% load static %}
 {% load leaflet_tags %}
 {% load geojson_tags %}
 
@@ -8,7 +9,9 @@
 {% block stylesheets %}
 {% leaflet_js plugins="forms" %}
 {% leaflet_css plugins="forms" %}
-
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <link rel="stylesheet"
+  href="{% static 'sini/css/select2-custom.css' %}">  
 <style type="text/css">
 
 
@@ -205,7 +208,15 @@
 
 <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
+  <script type="text/javascript">
 
+    $(document).ready(function() {
+      $('.js-select2-simple').select2();
+      //console.log(`{% csrf_token %}`);
+
+  });
+</script>
 
 {% endblock javascripts %}
