exportar incidencias y avisos a cesv

--- a/apps/templates/includes/footer-auth.html
+++ b/apps/templates/includes/footer-auth.html
@@ -24,10 +24,11 @@
         </a>          
       </div>
       <div class="col-lg-8 mx-auto text-center mb-4 mt-2">
-        <img class="w-15 fadeIn1 fadeInBottom" src="/static/assets/img/logo-defensa-civil.png" alt="500-error">
+        <img class="w-15 fadeIn1 fadeInBottom" src="/static/assets/img/logo-emergencias.png" alt="logo-emergencia">
+
+        <img class="w-30 fadeIn1 fadeInBottom" src="/static/assets/img/logo-sini.png" alt="logo-sini">
+        <img class="w-15 fadeIn1 fadeInBottom" src="/static/assets/img/logo-defensa-civil.png" alt="logo-defensa-civil">
         
-        <img class="w-30 fadeIn1 fadeInBottom" src="/static/assets/img/logo-sini.png" alt="500-error">
-        <img class="w-15 fadeIn1 fadeInBottom" src="/static/assets/img/logo-emergencias.png" alt="500-error">
         
         <!--a href="javascript:;" target="_blank" class="text-secondary me-xl-4 me-4">
           <span class="text-lg fab fa-dribbble"></span>
