--- a/sini/templates/sini/warning/warning_list.html
+++ b/sini/templates/sini/warning/warning_list.html
@@ -47,6 +47,20 @@
                   </span>
                 </h6>
               {% endif %}
+              <form id="export_form"
+              action="{% url 'sini:warning_export_csv'%}"
+              class=""
+              method="post"
+              autocomplete="off">
+              {% csrf_token %}
+                
+                <button class="btn btn-primary btn-large btn-sm mx-1 mb-0"
+                  type="submit"
+                  id="descartarB"
+                  value="descartar">&nbsp;&nbsp;Exportar
+                </button>
+               
+              </form>
             </div>
             
           </div>
