realizando filtros sobre incidencias

--- a/sini/templates/sini/api_user/api_user_detail.html
+++ b/sini/templates/sini/api_user/api_user_detail.html
@@ -216,7 +216,7 @@
             </p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn bg-success" data-bs-dismiss="modal">
+            <button type="button" class="btn bg-success text-white" data-bs-dismiss="modal">
               Cerrar
             </button>
             <button type="button" class="btn bg-danger text-white" id="aceptar">
@@ -311,7 +311,7 @@
 
     var request = $.ajax({
         type: "GET",
-        url: "/ganaclima/finca/eliminar",
+        url: "/sini/usuarios-moviles/eliminar/",
         data: {
             "id": valor
         },
