--- a/sini/templates/sini/incidence/incidence_list.html
+++ b/sini/templates/sini/incidence/incidence_list.html
@@ -265,7 +265,7 @@
                         </div>
                         <div class="form-group mt-0 mb-0">
                           <label class="control-label" for="id_name">
-                          Tipo Incidencia
+                          Tipo incidente
                           </label>
                   
                             <select id="id_type" name="type" style="width: 100%;" class="form-control form-select .js-select2-simple">
